# LinearRegression_Public

./: .gitignore  .~lock.data.ods#  Makefile  README.md  Validación de valores aleatorios  data.csv  data.ods  entrena  entrena_bot.sh  exit.csv  instrucciones.txt  klein_bottle.gnuplot  main  main.cpp  makefile  pinta_script  scriptCrossValidation.sh
EnlacesPlotting/: gnuplot : plotting data from multiple input files in a single graph - Stack Overflow.desktop  gnuplot \ parametric (E).desktop  gnuplot documentation - gnuplot.pdf.desktop  gnuplot: How to plot each line of a data file as Y and incremental X - Stack Overflow-1.desktop
data/: aapl.csv  aapl1.csv  data.csv  data.ods  data1.csv  data2.ods  data3.csv  data4.csv  dataLR.csv  dataLogR2.csv  dataLogR2c.csv  dataNLT.csv  dataP.csv  dataP2D.csv  matrix.csv  practica2_training_set.csv
firedoorescaper/: Makefile  main.cpp
firedoorescaper/include/: cgame.h  logRegression.h  trainningSet.h
firedoorescaper/src/: cfiredoor.cpp  cgame.cpp  logRegression.cpp  trainningSet.cpp
include/: cfiredoor.h  linearRegression.h  logRegression.h  neuralNetwork.h  perceptron.h  trainningSet.h
invSim64/resources/: input.csv
invSim64/resources/CrossValidation/: 00  01  02  03  (+6 more)
lib/: linearRegression.cpp  trainningSet.cpp
plots/: script_gnuplot  script_gnuplot2  script_gnuplot3  script_gnuplot4  script_gnuplot5  script_gnuplotLogR  script_gnuplotP  script_gnuplotP3D
src/: CMakeLists.txt  bot.cpp  entrena.cpp  linearRegression.cpp  logRegression.cpp  main.cpp  neuralNetwork.cpp  perceptron.cpp  trainningSet.cpp  util.cpp
(+3 files in other folders)
